--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,7 +43,7 @@ section#login {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
     transition: width .3s, height .3s;
-    -o-transition-timing-function: ease;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
@@ -59,4 +59,86 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color:#012340 ;
+    border: 2px solid #012340;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > i {
+    color: white;
+   /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #82B8D9;
+    font-size: 1em;
+    width: 80%;
+    height: 100%;
+    transform: translateY(-13px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #82B8D9;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #4e8fb8;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #ffffff;
+    color: #345b74;
+    border: 1px solid #4e8fb8;
+    border-radius: 5px;
+    text-decoration: none;
+}
+form > a.botao:hover {
+    background-color: #82B8D9;
+}
+form > a.botao > i {
+    font-size: 0.8em ;
 }
